[package]
name = "playground-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"